--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ spacy = "==3.5.0"
 jupyterlab = "==3.5.2"
 matplotlib = "==3.6.3"
 wordcloud = "==1.8.2.2"
+vadersentiment = "==3.3.2"
+gensim = "==4.3.0"
+seaborn = "==0.12.2"
 
 [dev-packages]
 
